fix in-progress search integration in prerak-orientation and certificate alignment

--- a/apps/front-end/src/App.css
+++ b/apps/front-end/src/App.css
@@ -330,3 +330,11 @@ ul {
 /* .css-view-1dbjc4n {
   z-index:"auto"
 } */
+
+.certificae-height .color {
+  min-height: 210mm;
+  min-width: 919px;
+  max-height: 210mm;
+  max-width: 919px;
+  margin: auto;
+}
